# amethyst_curling

./: .gitignore  Cargo.toml  DEVLOG.md
assets/texture/: curling_spritesheet.ron
config/: bindings.ron  display.ron
src/: curling.rs  main.rs
src/systems/: change_turn.rs  collide_stone.rs  debug.rs  launch_stone.rs  mod.rs  move_stone.rs
