[package]
name = "amethyst_curling"
version = "0.1.0"
authors = ["mattschmoyer <mattschmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", rev = "1ef6b1a673db8b7c3dd5142905b2f8dff7cf4f0c", features = ["metal"] }
