[package]
name = "amethyst_curling"
version = "0.1.0"
authors = ["mattschmoyer <mattschmo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.14.0"
features = ["metal", "tiles"]

[dependencies]
nalgebra = "0.19"
